tests/paczka1/fuzzy1/88915707.err
Error in line 2: xhnPS S52 66,1
Error in line 3: xhnPS S895 5,2
Error in line 4: zBgadi S52 98,0
Error in line 21: hGZw8p S638 18,3
Error in line 16: 2lswS S52 18,2
Error in line 23: hGZw8p S515 81,1
Error in line 18: J7VGsvvznG S515 27,3
Error in line 29: NuO S52 0,6
Error in line 28: J7VGsvvznG S52 74,2
